[gd_scene load_steps=4 format=3 uid="uid://wrv4h1dcsnnu"]

[ext_resource type="Script" path="res://OnlineMapLoader.gd" id="1_6elsr"]
[ext_resource type="PackedScene" uid="uid://e7y2w3cui1v8" path="res://OnlineMapSelector.tscn" id="2_pvqb8"]
[ext_resource type="PackedScene" uid="uid://s8bipelmf0t6" path="res://OnlineMenu.tscn" id="4_08w4u"]

[node name="OnlineMapLoader" type="Node"]
script = ExtResource("1_6elsr")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="OnlineMapSelector" parent="CanvasLayer" instance=ExtResource("2_pvqb8")]
unique_name_in_owner = true
visible = false

[node name="OnlineMenu" parent="CanvasLayer" instance=ExtResource("4_08w4u")]
visible = false
